Add admonition colors.

--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -7,3 +7,14 @@
         background-color: black;
     };
 }
+
+.admonition.purposeadmonition {    /*Lowercase class name*/
+    background-color: #ffff00;
+    color: black;
+    /* options as needed */
+
+    .admonition-title {
+        color: black;
+        background-color: #cccc00;
+    };
+}
